# dep_shield

./: .gitignore  README.md  pyproject.toml
src/: cli.py
src/parsers/: pyproject.py  requirements.py
src/rag/: analyzer.py  client.py  embeddings.py  models.py  store.py
src/scanners/: code_scanner.py  models.py  osv.py
tests/parsers/: test_pyproject.py  test_requirements.py
tests/scanners/: test_code_scanner.py  test_osv.py
