[project]
name = "dep_shield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "httpx>=0.28.1",
    "openai>=2.24.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
dep_shield = "src.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
